--- a/travel_itinerary/travel_itinerary_app/templates/travel_itinerary_app/search_results.html
+++ b/travel_itinerary/travel_itinerary_app/templates/travel_itinerary_app/search_results.html
@@ -104,7 +104,7 @@
     </header>
 
     <main>
-        <h1>Search Results for {{ term }} in {{ start_location }}:</h1>
+        <h1>Search Results for {{ term }} in {{ end_location }}:</h1>
         <ul>
             {% for business in businesses %}
             <li>{{ business.name }}</li>
