--- a/travel_itinerary/travel_itinerary_app/templates/travel_itinerary_app/ratings.html
+++ b/travel_itinerary/travel_itinerary_app/templates/travel_itinerary_app/ratings.html
@@ -86,6 +86,13 @@ nav a {
 nav a:hover {
 color: #2c4ebd; 
  }
+ footer {
+    text-align: center;
+    margin-top: 20px;
+    padding: 10px 0;
+    background-color: #0a1332;
+    color: #fff;
+}
 
 
 
@@ -255,9 +262,12 @@ function updateRating(rating) {
       // Reset the text box after submitting
       reviewText.value = '';
     } else {
-      alert('Please enter a review before submitting.');
+      alert('Please enter a suggestion for us to improve our website.');
     }
   });
 </script>
+<footer>
+    <p>&copy; 2023 NAwayFarer</p>
+</footer>
 </body>
 </html>
