Your commit message

--- a/travel_itinerary/travel_itinerary_app/templates/travel_itinerary_app/ratings.html
+++ b/travel_itinerary/travel_itinerary_app/templates/travel_itinerary_app/ratings.html
@@ -262,7 +262,7 @@ function updateRating(rating) {
       // Reset the text box after submitting
       reviewText.value = '';
     } else {
-      alert('Please enter a suggestion for us to improve our website.');
+      alert('Please enter suggestions for us to improve our website.');
     }
   });
 </script>
